--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -872,11 +872,3 @@ p {
 	padding: 0.2rem 0;
   	border-right: 1px solid $gray-200;
 }
-
-.wiki-edit-control-btn {
-	float: right;
-	
-	> * {
-		margin: 0.5rem 0.25rem;
-	}
-}
